# jandy-man

./: CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml  validate.yml
custom_components/: __init__.py
custom_components/jandy_man/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  icons.json  manifest.json  select.py  sensor.py
custom_components/jandy_man/translations/: en.json
docs/superpowers/plans/: 2026-06-18-jandy-pool-spa-integration.md
docs/superpowers/specs/: 2026-06-18-jandy-pool-spa-integration-design.md
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_init.py  test_select.py  test_sensor.py
