[project]
name = "jandy-man"
version = "0.1.0"
description = "Home Assistant custom integration to switch a pool between pool and spa mode via a Raspberry Pi HTTP API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant>=2024.12.0",
    "pytest>=8.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "aioresponses>=0.7.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
